--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <div class="column one">
       <section class="video-container">
         <!-- <video controls="controls" autoplay muted loop></video> -->
-        <iframe src="https://player.twitch.tv/?channel=esl_csgo&parent=livelike.github.io" frameborder="0" allowfullscreen="true" height="100%" width="100%"
+        <iframe src="https://player.twitch.tv/?channel=xhevbezzos&parent=livelike.github.io" frameborder="0" allowfullscreen="true" height="100%" width="100%"
             scrolling="no"></iframe>
       </section>
     </div>
