Changed fallback data for t20 Semi

--- a/index.html
+++ b/index.html
@@ -513,13 +513,13 @@
 
 <script>
   const fallback = {
-  PUBLIC_CHAT_ID: '19cb3d4b-5e50-4e4a-9adf-e855ff93e0f9',
+  PUBLIC_CHAT_ID: '1f185529-69b3-4c5c-83d6-f1bbed26fb2e',
   INFLUENCER_CHAT_ID: '',
-  LEADERBOARD_ID: '65ad0922-a4a2-4d09-bd7d-a5932b36c79e',
-  PROGRAM_ID: '22ffa1f8-db2e-40e0-9ddf-a3e1bf908920',
+  LEADERBOARD_ID: 'ae9795db-dd86-4cf1-83da-317490bf8f01',
+  PROGRAM_ID: '871620ac-411f-4d19-9e01-a40864a8f22c',
   ENDPOINT: 'https://cf-blast.livelikecdn.com/api/v1/',
-  CLIENT_ID: '5KFGNG3kPehcDu7qVCftuN0JUzHCYUW3wKTtws3F',
-  CHEER_METER_ID: '0ccaa346-8022-4a51-8089-99a78103ac8a'
+  CLIENT_ID: '8PqSNDgIVHnXuJuGte1HdvOjOqhCFE1ZCR3qhqaS',
+  CHEER_METER_ID: ''
 }
 
 
